# talos-transit-producer

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
k8s/: deployment.yaml
src/: main.rs
