[package]
name = "transit-http-producer"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"

[build-dependencies]
prost-build = "0.12"
